test/invalid/baseline/implements_and_includes_ws.txt
Syntax error at line 4 in implements_and_includes_ws.widl:
foobar;
^ Unrecognised tokens
